--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
                 <!-- Right navbar links -->
                 <div class="order-1 order-md-3 navbar-nav navbar-no-expand ml-auto">
-                    <a href="#" class="btn btn-link">Register</a>
+                    <a href="#" class="btn btn-link">Daftar</a>
                     <a href="admin" class="ml-3 btn btn-primary">Login</a>
                 </div>
             </div>
