--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>beranda Masjid Kota Depok </title>
+    <title>Masjid Kota Depok </title>
 
     <!-- Google Font: Source Sans Pro -->
     <link rel="stylesheet"
@@ -55,7 +55,6 @@
 
                 <!-- Right navbar links -->
                 <div class="order-1 order-md-3 navbar-nav navbar-no-expand ml-auto">
-                    <a href="#" class="btn btn-link">signup</a>
                     <a href="admin" class="ml-3 btn btn-primary">Login</a>
                 </div>
             </div>
