--- a/administrator/beranda.html
+++ b/administrator/beranda.html
@@ -265,25 +265,130 @@
         <div class="container-fluid">
           <!-- Small boxes (Stat box) -->
           <div class="row">
-            <!-- isi disini -->
-          </div>
-        </div>
-        <!-- /.container-fluid -->
-      </section>
-      <!-- /.content -->
-    </div>
-    <!-- /.content-wrapper -->
-    <footer class="main-footer">
-      <strong>Copyright &copy; 2023
-        <a href="#">Data Mesjid Kota Depok</a>.</strong>
-      All rights reserved.
-    </footer>
 
-    <!-- Control Sidebar -->
-    <aside class="control-sidebar control-sidebar-dark">
-      <!-- Control sidebar content goes here -->
-    </aside>
-    <!-- /.control-sidebar -->
+            <div class="col-lg-3 col-6">
+              <!-- small box -->
+              <div class="small-box bg-gradient-primary">
+                <div class="inner">
+                  <h3>15</h3>
+
+                  <p>Daftar Masjid</p>
+                </div>
+                <div class="icon">
+                  <i class="fas fa-mosque"></i>
+                </div>
+                <a href="masjid.html" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
+              </div>
+            </div>
+            <!-- ./col -->
+            <div class="col-lg-3 col-6">
+              <!-- small box -->
+              <div class="small-box bg-gradient-success">
+                <div class="inner">
+                  <h3>150</h3>
+
+                  <p>Jumlah Berita</p>
+                </div>
+                <div class="icon">
+                  <i class="fas fa-newspaper"></i>
+                </div>
+                <a href="berita.html" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
+              </div>
+            </div>
+            <!-- ./col -->
+            <div class="col-lg-3 col-6">
+              <!-- small box -->
+              <div class="small-box bg-gradient-teal">
+                <div class="inner">
+                  <h3><sup style="font-size: 20px">Rp</sup>12Jt</h3>
+            
+                  <p>Total Kas Masjid<p>
+                </div>
+                <div class="icon">
+                  <i class="fas fa-hand-holding-usd"></i>
+                </div>
+                <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
+              </div>
+            </div>
+            <!-- ./col -->
+            <div class="col-lg-3 col-6">
+              <!-- small box -->
+              <div class="small-box bg-gradient-cyan">
+                <div class="inner">
+                  <h3>5.000</h3>
+
+                  <p>Total Pengunjung</p>
+                </div>
+                <div class="icon">
+                  <i class="fas fa-signal"></i>
+                </div>
+                <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
+              </div>
+            </div>
+            <!-- ./col -->
+          </div>
+          <!-- /.row -->
+          <!-- Main row -->
+          <div class="row">
+            <div class="col-lg-7">
+
+              <div class="card card-primary">
+                <div class="card-header">
+                  <h3 class="card-title">Total Pengunjung 10 Hari</h3>
+                  <div class="card-tools">
+                    <button type="button" class="btn btn-tool" data-card-widget="collapse">
+                      <i class="fas fa-minus"></i>
+                    </button>
+                    <button type="button" class="btn btn-tool" data-card-widget="remove">
+                      <i class="fas fa-times"></i>
+                    </button>
+                  </div>
+                </div>
+                <div class="card-body">
+                  <div class="chart">
+                    <canvas id="pengunjung"></canvas>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-5">
+            
+              <div class="card card-success">
+                <div class="card-header">
+                  <h3 class="card-title">Pendataan Kas</h3>
+                  <div class="card-tools">
+                    <button type="button" class="btn btn-tool" data-card-widget="collapse">
+                      <i class="fas fa-minus"></i>
+                    </button>
+                    <button type="button" class="btn btn-tool" data-card-widget="remove">
+                      <i class="fas fa-times"></i>
+                    </button>
+                  </div>
+                </div>
+                <div class="card-body">
+                  <canvas id="pieChart" style="min-height: 250px; height: 250px; max-height: 250px; max-width: 100%;"></canvas>
+                </div>
+            </div>
+
+          </div>
+          <!-- /.row (main row) -->
+        </div>
+    </div>
+    <!-- /.container-fluid -->
+    </section>
+  </div>
+  <!-- /.content-wrapper -->
+  <footer class="main-footer">
+    <strong>Copyright &copy; 2023
+      <a href="#">Data Mesjid Kota Depok</a>.</strong>
+    All rights reserved.
+  </footer>
+
+  <!-- Control Sidebar -->
+  <aside class="control-sidebar control-sidebar-dark">
+    <!-- Control sidebar content goes here -->
+  </aside>
+  <!-- /.control-sidebar -->
   </div>
   <!-- ./wrapper -->
 
@@ -317,6 +422,7 @@
   <script src="../plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>
   <!-- AdminLTE App -->
   <script src="../dist/js/adminlte.js"></script>
+  <script src="../dist/js/script.js"></script>
 </body>
 
 </html>
