--- a/administrator/register .html
+++ b/administrator/register .html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Masjid Kota Depok | Registration Page (v2)</title>
+  <title>Masjid Kota Depok | Registration</title>
 
   <!-- Google Font: Source Sans Pro -->
   <link rel="stylesheet"
@@ -26,55 +26,40 @@
         <a href="" class="h3"><b>Masjid Kota Depok</b></a>
       </div>
       <div class="card-body">
-        <form>
-          <div class="input-group mb-3">
-            <input type="text" class="form-control" id="name" placeholder="Full name" />
+        <form id="quickForm">
+          <div class="form-group input-group mb-3">
+            <input type="text" class="form-control" id="nama" name="nama" placeholder="Full name" />
             <div class="input-group-append">
               <div class="input-group-text">
                 <span class="fas fa-user"></span>
               </div>
             </div>
-            <br /><span id="errorname"></span>
           </div>
-          <div class="input-group mb-3">
-            <input type="email" class="form-control" id="email" placeholder="email" />
+          <div class="form-group input-group mb-3">
+            <input type="email" class="form-control" id="email" name="email" placeholder="email" />
             <div class="input-group-append">
               <div class="input-group-text">
                 <span class="fas fa-envelope"></span>
               </div>
             </div>
-            <br /><span id="erroremail"></span>
           </div>
-          <div class="input-group mb-3">
-            <input type="password" class="form-control" id="password" placeholder="Password" />
+          <div class="form-group input-group mb-3">
+            <input type="password" class="form-control" id="password" name="password" placeholder="Password" />
             <div class="input-group-append">
               <div class="input-group-text">
                 <span class="fas fa-lock"></span>
               </div>
             </div>
-            <br /><span id="errorpassword"></span>
-          </div>
-          <div class="input-group mb-3">
-            <input type="password" class="form-control" id="repassword" placeholder="Retype password" />
-            <div class="input-group-append">
-              <div class="input-group-text">
-                <span class="fas fa-lock"></span>
-              </div>
-            </div>
-            <br /><span id="errorrepassword"></span>
           </div>
           <div class="row">
-            <!-- /.col -->
-            <div class="col-12">
-              <button type="button" class="btn btn-primary btn-block" onclick="Register()">
-                Register
-              </button>
+            <div class="col-12"><button type="submit" class="btn btn-primary btn-block">Submit</button>
+              <p class="mb-0"><a href="login.html" class="text-center">Sudah punya akun?</a>
+
+              </p>
             </div>
-            <!-- /.col -->
           </div>
         </form>
 
-        <a href="login.html" class="text-center">Sudah punya akun?</a>
       </div>
       <!-- /.form-box -->
     </div>
@@ -88,11 +73,59 @@
   <script src="../plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
   <!-- AdminLTE App -->
   <script src="../dist/js/adminlte.min.js"></script>
-
+  <script src="../plugins/jquery-validation/jquery.validate.min.js"></script>
+  <script src="../plugins/jquery-validation/additional-methods.min.js"></script>
   <!-- SweetAlert2 -->
   <script src="../plugins/sweetalert2/sweetalert2.min.js"></script>
   <!-- Code injected by live-server -->
   <script>
+    $(function () {
+      $.validator.setDefaults({
+        submitHandler: function () {
+          window.alert("Anda Berhasil Login")
+          window.location.replace("beranda.html");
+        },
+      });
+      $("#quickForm").validate({
+        rules: {
+          nama: {
+            required: true,
+          },
+          email: {
+            required: true,
+            email: true,
+          },
+          password: {
+            required: true,
+            minlength: 8,
+          },
+        },
+        messages: {
+          nama: {
+            required: "Tolong masukan nama lengkap",
+          },
+          email: {
+            required: "Tolong masukan Email",
+            email: "Tolong masukan Email yang valid",
+          },
+          password: {
+            required: "Tolong masukan Passwordnya",
+            minlength: "Password minimal 8 karakter",
+          },
+        },
+        errorElement: "span",
+        errorPlacement: function (error, element) {
+          error.addClass("invalid-feedback");
+          element.closest(".form-group").append(error);
+        },
+        highlight: function (element, errorClass, validClass) {
+          $(element).addClass("is-invalid");
+        },
+        unhighlight: function (element, errorClass, validClass) {
+          $(element).removeClass("is-invalid");
+        },
+      });
+    });
     // <![CDATA[  <-- For SVG support
     if ("WebSocket" in window) {
       (function () {
