Ganti nama sidebar

--- a/administrator/masjid.html
+++ b/administrator/masjid.html
@@ -211,7 +211,7 @@
               <a href="beranda.html" class="nav-link active">
                 <i class="nav-icon fas fa-tachometer-alt"></i>
                 <p>
-                  Nama Masjid
+                  Dashboard
                 </p>
               </a>
             </li>
