perbaikan registrasi masjid

--- a/registrasi-masjid.html
+++ b/registrasi-masjid.html
@@ -73,12 +73,12 @@
                         <div class="container-fluid">
                             <div class="row">
                                 <div class="col-sm-6">
-                                    <h1 class="m-0">Berita Masjid</h1>
+                                    <h1 class="m-0">Registrasi Masjid Anda</h1>
                                 </div>
                                 <div class="col-sm-6">
                                     <ol class="breadcrumb float-sm-right">
                                         <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                                        <li class="breadcrumb-item active">berita</li>
+                                        <li class="breadcrumb-item active">Registrasi Masjid</li>
                                     </ol>
                                 </div>
                             </div>
@@ -87,7 +87,7 @@
 
                     <div class="card card-primary card-outline">
                         <div class="card-header">
-                            <h1 class="card-title">Berita Populer</h1>
+                            <h1 class="card-title">Form Registrasi Masjid</h1>
                         </div>
                         <div class="card-body">
                             
