ganti url login

--- a/berita.html
+++ b/berita.html
@@ -55,7 +55,7 @@
 
                 <!-- Right navbar links -->
                 <div class="order-1 order-md-3 navbar-nav navbar-no-expand ml-auto">
-                    <a href="admin" class="ml-3 btn btn-primary">Login</a>
+                    <a href="administrator" class="ml-3 btn btn-primary">Login</a>
                 </div>
             </div>
         </nav>
@@ -115,7 +115,8 @@
                                             class="card-img-top" height="190px" alt="...">
                                         <h1 class="card-title text-center pt-2">
                                             <a href="detail-berita.html">
-                                                Wali Kota Depok Isi Kuliah Subuh Ahad Gabungan Akbar di Masjid Balai Kota
+                                                Wali Kota Depok Isi Kuliah Subuh Ahad Gabungan Akbar di Masjid Balai
+                                                Kota
 
                                             </a>
                                         </h1>
