--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
                 <!-- Right navbar links -->
                 <div class="order-1 order-md-3 navbar-nav navbar-no-expand ml-auto">
-                    <a href="admin" class="ml-3 btn btn-primary">Login</a>
+                    <a href="administrator" class="ml-3 btn btn-primary">Login</a>
                 </div>
             </div>
         </nav>
