--- a/registrasi-masjid.html
+++ b/registrasi-masjid.html
@@ -55,7 +55,7 @@
 
                 <!-- Right navbar links -->
                 <div class="order-1 order-md-3 navbar-nav navbar-no-expand ml-auto">
-                    <a href="admin" class="ml-3 btn btn-primary">Login</a>
+                    <a href="administrator" class="ml-3 btn btn-primary">Login</a>
                 </div>
             </div>
         </nav>
@@ -64,7 +64,7 @@
         <!-- Content Wrapper. Contains page content -->
         <div class="content-wrapper">
             <!-- Main content -->
-            
+
             <!-- Main content -->
             <div class="content">
                 <div class="container">
@@ -90,79 +90,79 @@
                             <h1 class="card-title">Form Registrasi Masjid</h1>
                         </div>
                         <div class="card-body">
-                            
-                        <table cellpadding="4">
-                            <tr>
-                                <td>Nama Masjid</td>
-                                <td>:</td>
-                                <td width="85%"><input class="form-control" type="text"></td>
-                            </tr>
-                            <tr>
-                                <td>kecamatan</td>
-                                <td>:</td>
-                                <td>
-                                    <select  class="form-control" id="kecamatan">
-                                        <option value="Sukmajaya">Sukmajaya</option>
-                                        <option value="Beji">Beji</option>
-                                        <option value="Bojongsari">Bojongsari</option>
-                                        <option value="Cilodong">Cilodong</option>
-                                    </select>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>kelurahan</td>
-                                <td>:</td>
-                                <td>
-                                    <select  class="form-control" id="kelurahan">
-                                        <option value="Mekarjaya">Mekarjaya</option>
-                                        <option value="Beji Timur">Beji Timur</option>
-                                        <option value="Kemiri Muka">Kemiri Muka</option>
-                                        <option value="Pondok Cina">Pondok Cina</option>
-                                    </select>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>Deskripsi Fasilitas</td>
-                                <td>:</td>
-                                <td><textarea class="form-control" name="" id=""></textarea></td>
-                            </tr>
-                            <tr>
-                                <td>Nama Pengurus DKM</td>
-                                <td>:</td>
-                                <td><input class="form-control" type="text"></td>
-                            </tr>
-                            <tr>
-                                <td>No. HP/Telepon</td>
-                                <td>:</td>
-                                <td><input class="form-control" type="number"></td>
-                            </tr>
-                            <tr>
-                                <td>Email</td>
-                                <td>:</td>
-                                <td><input class="form-control" type="text"></td>
-                            </tr>
-                            <tr>
-                                <td>Alamat Web</td>
-                                <td>:</td>
-                                <td><input class="form-control" type="email" value="http://"></td>
-                            </tr>
-                            <tr>
-                                <td>Alamat Lengkap</td>
-                                <td>:</td>
-                                <td><textarea class="form-control" name="" id=""></textarea></td>
-                            </tr>
-                            <tr>
-                                <td>Latitude, Longtitude</td>
-                                <td>:</td>
-                                <td><input class="form-control" type="text"></td>
-                            </tr>
-                            <tr>
-                                <td colspan="3" class="text-center pt-3">
-                                    <button type="button" class="btn btn-success">Daftar</button>
-                                    <button type="button" class="btn btn-danger">Batal</button>                        
-                                </td>
-                            </tr>                            
-                        </table>
+
+                            <table cellpadding="4">
+                                <tr>
+                                    <td>Nama Masjid</td>
+                                    <td>:</td>
+                                    <td width="85%"><input class="form-control" type="text"></td>
+                                </tr>
+                                <tr>
+                                    <td>kecamatan</td>
+                                    <td>:</td>
+                                    <td>
+                                        <select class="form-control" id="kecamatan">
+                                            <option value="Sukmajaya">Sukmajaya</option>
+                                            <option value="Beji">Beji</option>
+                                            <option value="Bojongsari">Bojongsari</option>
+                                            <option value="Cilodong">Cilodong</option>
+                                        </select>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>kelurahan</td>
+                                    <td>:</td>
+                                    <td>
+                                        <select class="form-control" id="kelurahan">
+                                            <option value="Mekarjaya">Mekarjaya</option>
+                                            <option value="Beji Timur">Beji Timur</option>
+                                            <option value="Kemiri Muka">Kemiri Muka</option>
+                                            <option value="Pondok Cina">Pondok Cina</option>
+                                        </select>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>Deskripsi Fasilitas</td>
+                                    <td>:</td>
+                                    <td><textarea class="form-control" name="" id=""></textarea></td>
+                                </tr>
+                                <tr>
+                                    <td>Nama Pengurus DKM</td>
+                                    <td>:</td>
+                                    <td><input class="form-control" type="text"></td>
+                                </tr>
+                                <tr>
+                                    <td>No. HP/Telepon</td>
+                                    <td>:</td>
+                                    <td><input class="form-control" type="number"></td>
+                                </tr>
+                                <tr>
+                                    <td>Email</td>
+                                    <td>:</td>
+                                    <td><input class="form-control" type="text"></td>
+                                </tr>
+                                <tr>
+                                    <td>Alamat Web</td>
+                                    <td>:</td>
+                                    <td><input class="form-control" type="email" value="http://"></td>
+                                </tr>
+                                <tr>
+                                    <td>Alamat Lengkap</td>
+                                    <td>:</td>
+                                    <td><textarea class="form-control" name="" id=""></textarea></td>
+                                </tr>
+                                <tr>
+                                    <td>Latitude, Longtitude</td>
+                                    <td>:</td>
+                                    <td><input class="form-control" type="text"></td>
+                                </tr>
+                                <tr>
+                                    <td colspan="3" class="text-center pt-3">
+                                        <button type="button" class="btn btn-success">Daftar</button>
+                                        <button type="button" class="btn btn-danger">Batal</button>
+                                    </td>
+                                </tr>
+                            </table>
                         </div>
                     </div>
                 </div>
