--- a/tentang.html
+++ b/tentang.html
@@ -57,7 +57,7 @@
 
                 <!-- Right navbar links -->
                 <div class="order-1 order-md-3 navbar-nav navbar-no-expand ml-auto">
-                    <a href="admin" class="ml-3 btn btn-primary">Login</a>
+                    <a href="administrator" class="ml-3 btn btn-primary">Login</a>
                 </div>
             </div>
         </nav>
@@ -89,8 +89,8 @@
                                 <div class="card-body">
                                     <div class="row">
                                         <div class="col-md-12">
-                                            <img src="dist/img/hWWcFwZRgLg65xRPK4XboR6rPlGzITetUiE49VFa.webp"
-                                                alt="" class="img-thumbnail shadow mx-auto d-block">
+                                            <img src="dist/img/hWWcFwZRgLg65xRPK4XboR6rPlGzITetUiE49VFa.webp" alt=""
+                                                class="img-thumbnail shadow mx-auto d-block">
                                             <p class="card-text mt-3">
                                                 Website yang mengumpulkan data masjid di Kota Depok akan berguna bagi
                                                 masyarakat yang ingin mengetahui informasi tentang
@@ -109,22 +109,33 @@
                                                 kebutuhan mereka.
                                             </p>
                                             <p>
-                                            Selain itu, website ini juga dapat menyediakan informasi tentang jadwal sholat dan kegiatan-kegiatan yang diadakan di
-                                            masjid-masjid tersebut. Pengguna dapat mengetahui jadwal sholat dan kegiatan-kegiatan lain seperti ceramah, kajian, dan
-                                            kelas-kelas belajar. Fitur ini akan sangat bermanfaat bagi masyarakat yang ingin mencari masjid untuk mengikuti
-                                            kegiatan-kegiatan tersebut.</p>
+                                                Selain itu, website ini juga dapat menyediakan informasi tentang jadwal
+                                                sholat dan kegiatan-kegiatan yang diadakan di
+                                                masjid-masjid tersebut. Pengguna dapat mengetahui jadwal sholat dan
+                                                kegiatan-kegiatan lain seperti ceramah, kajian, dan
+                                                kelas-kelas belajar. Fitur ini akan sangat bermanfaat bagi masyarakat
+                                                yang ingin mencari masjid untuk mengikuti
+                                                kegiatan-kegiatan tersebut.</p>
                                             <p>
-                                            Website ini juga dapat menyediakan fitur untuk mengirimkan laporan masalah atau keluhan tentang masjid yang ditemukan.
-                                            Fitur ini akan memudahkan masyarakat untuk menyampaikan masalah atau keluhan yang ditemukan di masjid tertentu kepada
-                                            pihak yang berwenang. Dengan demikian, masalah atau keluhan tersebut dapat segera ditindaklanjuti dan diperbaiki.</p>
+                                                Website ini juga dapat menyediakan fitur untuk mengirimkan laporan
+                                                masalah atau keluhan tentang masjid yang ditemukan.
+                                                Fitur ini akan memudahkan masyarakat untuk menyampaikan masalah atau
+                                                keluhan yang ditemukan di masjid tertentu kepada
+                                                pihak yang berwenang. Dengan demikian, masalah atau keluhan tersebut
+                                                dapat segera ditindaklanjuti dan diperbaiki.</p>
                                             <p>
-                                            Selain itu, website ini juga dapat menyediakan fitur untuk memberikan donasi online ke masjid-masjid yang terdaftar di
-                                            dalam sistem. Fitur ini akan memudahkan masyarakat yang ingin memberikan donasi untuk masjid-masjid yang ada di kota
-                                            Depok.</p>
+                                                Selain itu, website ini juga dapat menyediakan fitur untuk memberikan
+                                                donasi online ke masjid-masjid yang terdaftar di
+                                                dalam sistem. Fitur ini akan memudahkan masyarakat yang ingin memberikan
+                                                donasi untuk masjid-masjid yang ada di kota
+                                                Depok.</p>
                                             <p>
-                                            Secara keseluruhan, website yang mengumpulkan data masjid di Kota Depok akan menjadi sumber informasi yang sangat
-                                            bermanfaat bagi masyarakat. Website ini akan memudahkan masyarakat untuk menemukan informasi tentang masjid-masjid yang
-                                            ada di kota tersebut dan mengikuti kegiatan-kegiatan yang diadakan di masjid</p>
+                                                Secara keseluruhan, website yang mengumpulkan data masjid di Kota Depok
+                                                akan menjadi sumber informasi yang sangat
+                                                bermanfaat bagi masyarakat. Website ini akan memudahkan masyarakat untuk
+                                                menemukan informasi tentang masjid-masjid yang
+                                                ada di kota tersebut dan mengikuti kegiatan-kegiatan yang diadakan di
+                                                masjid</p>
                                         </div>
                                     </div>
                                 </div>
