--- a/masjid.html
+++ b/masjid.html
@@ -55,7 +55,7 @@
 
                 <!-- Right navbar links -->
                 <div class="order-1 order-md-3 navbar-nav navbar-no-expand ml-auto">
-                    <a href="admin" class="ml-3 btn btn-primary">Login</a>
+                    <a href="administrator" class="ml-3 btn btn-primary">Login</a>
                 </div>
             </div>
         </nav>
@@ -70,17 +70,22 @@
                         <div class="container-fluid">
                             <div class=" card row p-3">
                                 <h3>Daftar Masjid Depok</h3>
-                                <div class="col-md-12 mt-4. mb-5 " >
-                                    <h6 class="mt-3">Masjid Kubah  Emas</h6>
-                                    <div class="row">                                        
+                                <div class="col-md-12 mt-4. mb-5 ">
+                                    <h6 class="mt-3">Masjid Kubah Emas</h6>
+                                    <div class="row">
                                         <div class="col-md-3 ">
-                                            <img class="img-thumbnail" alt="Masjid Kubah Mas" src="dist/img/kubah-mas1.jpg" />
+                                            <img class="img-thumbnail" alt="Masjid Kubah Mas"
+                                                src="dist/img/kubah-mas1.jpg" />
                                         </div>
                                         <div class="col-md-9">
                                             <p>
-                                                Siapa sangka di sudut jalan kawasan Depok ada sebuah masjid megah yang menawan. Ya, Masjid Dian Al Mahri atau yang lebih dikenal dengan Masjid Kubah Emas Depok. Berkat kemegahannya masjid ini disebut sebagai masjid paling megah di kawasan Asia Tenggara.
-                                                <br>                                
-                                                Masjid yang disebut sebagai masjid termegah di Asia Tenggara ini selalu ramai dikunjungi, baik untuk ibadah hingga wisata religi...                                            
+                                                Siapa sangka di sudut jalan kawasan Depok ada sebuah masjid megah yang
+                                                menawan. Ya, Masjid Dian Al Mahri atau yang lebih dikenal dengan Masjid
+                                                Kubah Emas Depok. Berkat kemegahannya masjid ini disebut sebagai masjid
+                                                paling megah di kawasan Asia Tenggara.
+                                                <br>
+                                                Masjid yang disebut sebagai masjid termegah di Asia Tenggara ini selalu
+                                                ramai dikunjungi, baik untuk ibadah hingga wisata religi...
                                                 <a href="profile.html">Selengkapnya</a>
                                             </p>
                                         </div>
@@ -88,13 +93,16 @@
                                     <div class="row mt-5">
                                         <div class="col-md-6">
                                             <h6>Masjid Al-Kautsar</h6>
-                                            <div class="row">                                                
+                                            <div class="row">
                                                 <div class="col-md-5">
-                                                    <img class="img-thumbnail" alt="Masjid Al-Kautsar" src="dist/img/al-kautsar.jpg" />
+                                                    <img class="img-thumbnail" alt="Masjid Al-Kautsar"
+                                                        src="dist/img/al-kautsar.jpg" />
                                                 </div>
                                                 <div class="col-md-7">
                                                     <p>
-                                                        Sebuah masjid agung yang dibangun di tepi Jalan Mahakam. Masjid ini selain menjadi tempat ibadah shalat bagi umat muslim juga sebagai wisata religi...
+                                                        Sebuah masjid agung yang dibangun di tepi Jalan Mahakam. Masjid
+                                                        ini selain menjadi tempat ibadah shalat bagi umat muslim juga
+                                                        sebagai wisata religi...
                                                         <a href="profile.html">Selengkapnya</a>
                                                     </p>
                                                 </div>
@@ -104,11 +112,13 @@
                                             <h6>Masjid At-Thohir</h6>
                                             <div class="row">
                                                 <div class="col-md-5">
-                                                    <img class="img-thumbnail" alt="Masjid At-Thohir" src="dist/img/at-thohir.jpg" />
+                                                    <img class="img-thumbnail" alt="Masjid At-Thohir"
+                                                        src="dist/img/at-thohir.jpg" />
                                                 </div>
                                                 <div class="col-md-7">
                                                     <p>
-                                                        Masjid bernuansa putih ini memiliki kapasitas 1.976 orang di area dalam masjid dan 1.395 di fasilitas pendukung aula...
+                                                        Masjid bernuansa putih ini memiliki kapasitas 1.976 orang di
+                                                        area dalam masjid dan 1.395 di fasilitas pendukung aula...
                                                         <a href="profile.html">Selengkapnya</a>
                                                     </p>
                                                 </div>
@@ -120,11 +130,15 @@
                                             <h6>Masjid Nurul Musthofa Center</h6>
                                             <div class="row">
                                                 <div class="col-md-5">
-                                                    <img class="img-thumbnail" alt="Masjid Nurul Mustofa" src="dist/img/nurul-mustofa.jpg" />
+                                                    <img class="img-thumbnail" alt="Masjid Nurul Mustofa"
+                                                        src="dist/img/nurul-mustofa.jpg" />
                                                 </div>
                                                 <div class="col-md-7">
                                                     <p>
-                                                        Sebuah masjid sekaligus pusat pendidikan milik organisasi Majelis Nurul Musthofa yang didirikan oleh Habib Hasan bin Ja'far Assegaf serta masjid ini menjadi pusat dakwah Islam untuk masyarakat...
+                                                        Sebuah masjid sekaligus pusat pendidikan milik organisasi
+                                                        Majelis Nurul Musthofa yang didirikan oleh Habib Hasan bin
+                                                        Ja'far Assegaf serta masjid ini menjadi pusat dakwah Islam untuk
+                                                        masyarakat...
                                                         <a href="profile.html">Selengkapnya</a>
                                                     </p>
                                                 </div>
@@ -134,11 +148,15 @@
                                             <h6>Masjid Baitul Kamal</h6>
                                             <div class="row">
                                                 <div class="col-md-5">
-                                                    <img class="img-thumbnail" alt="Masjid Baitul Kamal" src="dist/img/baitul-kamal.png" />
+                                                    <img class="img-thumbnail" alt="Masjid Baitul Kamal"
+                                                        src="dist/img/baitul-kamal.png" />
                                                 </div>
                                                 <div class="col-md-7">
                                                     <p>
-                                                        Pembangunan masjid ini pertama kali dilakukan pada masa pemerintahan Wali kota Depok yang pertama, Badrul Kamal pada tahun 2015-2018. Selama masa pembangunan, masjid ini tidak menggunakan dana APBD kota...
+                                                        Pembangunan masjid ini pertama kali dilakukan pada masa
+                                                        pemerintahan Wali kota Depok yang pertama, Badrul Kamal pada
+                                                        tahun 2015-2018. Selama masa pembangunan, masjid ini tidak
+                                                        menggunakan dana APBD kota...
                                                         <a href="profile.html">Selengkapnya</a>
                                                     </p>
                                                 </div>
