--- a/profile.html
+++ b/profile.html
@@ -55,7 +55,7 @@
 
                 <!-- Right navbar links -->
                 <div class="order-1 order-md-3 navbar-nav navbar-no-expand ml-auto">
-                    <a href="admin" class="ml-3 btn btn-primary">Login</a>
+                    <a href="administrator" class="ml-3 btn btn-primary">Login</a>
                 </div>
             </div>
         </nav>
@@ -68,7 +68,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <h3 class="my-3 mx-5">Profil Masjid Kubah Emas</h3>
-                        <div class="row mx-5">                                                        
+                        <div class="row mx-5">
                             <div class="col-md-2">
                                 <img class="img-thumbnail" alt="Profil Masjid" src="dist/img/kubah-mas1.jpg" />
                             </div>
@@ -93,7 +93,10 @@
                                 <h4><b>Sejarah Masjid</b></h4>
                                 <br>
                                 <p class="text-justify">
-                                    Masjid Dian Al Mahri dibangun oleh Hj. Dian Djuriah Maimun Al Rasyid. Masjid ini mulai dibangun sejak tahun 2001 dan selesai sekitar akhir tahun 2006. Masjid ini mulai terbuka untuk umum sejak tanggal 31 Desember 2006, bertepatan dengan Idul Adha yang kedua kalinya pada tahun itu.
+                                    Masjid Dian Al Mahri dibangun oleh Hj. Dian Djuriah Maimun Al Rasyid. Masjid ini
+                                    mulai dibangun sejak tahun 2001 dan selesai sekitar akhir tahun 2006. Masjid ini
+                                    mulai terbuka untuk umum sejak tanggal 31 Desember 2006, bertepatan dengan Idul Adha
+                                    yang kedua kalinya pada tahun itu.
                                 </p>
                                 <h4><b>fasilitas Masjid</b></h4>
                                 <ol>
@@ -126,12 +129,16 @@
                             <div class="col-md-1">
                             </div>
                             <div class="card col-md-6">
-                                 
+
                                 <address>
-                                     <strong>Alamat & Peta Lokasi</strong><br />Meruyung, Kec. Limo, Kota Depok<br /> Jawa Barat 16515<br /> 
-                                     Phone: 021 - 7788 0803
-                                     <br>
-                                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3965.068450649195!2d106.771408!3d-6.385167399999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69e8d54269174b%3A0xf9c957d36a3a3f09!2sJl.%20Masjid%20Kubah%20Emas%2C%20Meruyung%2C%20Kec.%20Limo%2C%20Kota%20Depok%2C%20Jawa%20Barat%2016515!5e0!3m2!1sid!2sid!4v1673430765563!5m2!1sid!2sid" width="530" height="350" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                                    <strong>Alamat & Peta Lokasi</strong><br />Meruyung, Kec. Limo, Kota Depok<br />
+                                    Jawa Barat 16515<br />
+                                    Phone: 021 - 7788 0803
+                                    <br>
+                                    <iframe
+                                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3965.068450649195!2d106.771408!3d-6.385167399999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69e8d54269174b%3A0xf9c957d36a3a3f09!2sJl.%20Masjid%20Kubah%20Emas%2C%20Meruyung%2C%20Kec.%20Limo%2C%20Kota%20Depok%2C%20Jawa%20Barat%2016515!5e0!3m2!1sid!2sid!4v1673430765563!5m2!1sid!2sid"
+                                        width="530" height="350" style="border:0;" allowfullscreen="" loading="lazy"
+                                        referrerpolicy="no-referrer-when-downgrade"></iframe>
                                 </address>
                             </div>
                         </div>
@@ -140,7 +147,7 @@
                 <h5 class="mx-5">
                     Testimoni & Komentar
                 </h5>
-                <div class="row mx-5">                    
+                <div class="row mx-5">
                     <div class="col-md-4">
                         <h4 class="text-left">
                             <b>Komentar</b>
@@ -151,7 +158,8 @@
                             </div>
                             <div class="col-md-6">
                                 <p class="text-justify">
-                                    "Kami mengucapkan terima kasih atas kunjungan rombongan dari Kabupaten konoha dan mohon maaf atas penyambutan kami yang sederhana ini,"
+                                    "Kami mengucapkan terima kasih atas kunjungan rombongan dari Kabupaten konoha dan
+                                    mohon maaf atas penyambutan kami yang sederhana ini,"
                                 </p>
                             </div>
                         </div>
@@ -166,7 +174,8 @@
                             </div>
                             <div class="col-md-6">
                                 <p class="text-justify">
-                                    "Disini juga ada belajar keterampilan, kedepannya kita berharap bisa mengadakan pembelajaran keterampilan, yang tentunya bermanfaat."
+                                    "Disini juga ada belajar keterampilan, kedepannya kita berharap bisa mengadakan
+                                    pembelajaran keterampilan, yang tentunya bermanfaat."
                                 </p>
                             </div>
                         </div>
@@ -181,17 +190,18 @@
                             </div>
                             <div class="col-md-6">
                                 <p class="text-justify">
-                                    "Tentunya banyak sekali ilmu yang didapat disini, semua pengurus disini diberikan kesejateraan agar para pengurus masjid lebih fokus mengurus masjid."
+                                    "Tentunya banyak sekali ilmu yang didapat disini, semua pengurus disini diberikan
+                                    kesejateraan agar para pengurus masjid lebih fokus mengurus masjid."
                                 </p>
                             </div>
                         </div>
                     </div>
-                    </div>
                 </div>
             </div>
-            <!-- /.row -->
         </div>
-        <!-- /.container-fluid -->
+        <!-- /.row -->
+    </div>
+    <!-- /.container-fluid -->
     </div>
     <!-- /.content -->
     </div>
