--- a/administrator/register.html
+++ b/administrator/register.html
@@ -53,7 +53,7 @@
           </div>
           <div class="row">
             <div class="col-12"><button type="submit" class="btn btn-primary btn-block">Submit</button>
-              <p class="mb-0"><a href="login.html" class="text-center">Sudah punya akun?</a>
+              <p class="mb-0"><a href="index.html" class="text-center">Sudah punya akun?</a>
 
               </p>
             </div>
